kubernetes/aks/apps/nachet/base/landing-403-nachet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-403-nachet-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing-403-nachet
  template:
    metadata:
      labels:
        app: landing-403-nachet
    spec:
      containers:
        - name: landing-403-nachet
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html-volume
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html-volume
          configMap:
            name: landing-page-content
---
apiVersion: v1
kind: Service
metadata:
  name: default-nginx-backend
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: landing-403-nachet
