kubernetes/aks/apps/nachet/base/nachet-backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nachet-backend
  namespace: nachet
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: nachet-backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: nachet-backend
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - nachet-backend
              topologyKey: "kubernetes.io/hostname"
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.azure.com/role
                    operator: In
                    values:
                      - agent
      containers:
        - name: nachet-backend
          image: ghcr.io/ai-cfia/nachet-backend:143-deploy-swin-22-spp
          command: ["/bin/sh", "-c"]
          args: ['hypercorn -b :8080 app:app']
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
          resources:
            requests:
              cpu: "250m"
              memory: "1Gi"
            limits:
              cpu: "500m"
              memory: "2Gi"
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

---
apiVersion: v1
kind: Service
metadata:
  name: nachet-backend-svc
  namespace: nachet
spec:
  clusterIP: None
  selector:
    app: nachet-backend
  ports:
    - protocol: TCP
      port: 8080
