kubernetes/aks/apps/nachet/base/nachet-rcnn-model-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nachet-rcnn-detector
  namespace: nachet
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: nachet-rcnn-detector
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: nachet-rcnn-detector
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - nachet-rcnn-detector
              topologyKey: "kubernetes.io/hostname"
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/role
                    operator: In
                    values:
                      - agent
      containers:
        - name: nachet-rcnn-detector
          image: ghcr.io/ai-cfia/nachet-backend:29-azureml-seed-detector
          imagePullPolicy: Always
          command: ["/bin/sh", "-c"]
          args: ['azmlinfsrv --entry_script /app/scoring_file_v_1_0_0.py']
          ports:
            - containerPort: 5001
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          livenessProbe:
            httpGet:
              path: /score
              port: 5001
            initialDelaySeconds: 60
            periodSeconds: 10
          resources:
            requests:
              cpu: "250m"
              memory: "1Gi"
            limits:
              cpu: "500m"
              memory: "2Gi"
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      volumes:
        - name: tmp
          persistentVolumeClaim:
            claimName: nachet-tmp-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nachet-rcnn-detector-svc
  namespace: nachet
spec:
  clusterIP: None
  selector:
    app: nachet-rcnn-detector
  ports:
    - protocol: TCP
      port: 5001
