kubernetes/aks/apps/nachet/base/nachet-swin-22-spp-model-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nachet-swin-classifier-22-spp
  namespace: nachet
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: nachet-swin-classifier-22-spp
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: nachet-swin-classifier-22-spp
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - nachet-swin-classifier-22-spp
              topologyKey: "kubernetes.io/hostname"
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.azure.com/role
                    operator: In
                    values:
                      - agent
      containers:
        - name: nachet-swin-classifier-22-spp
          image: ghcr.io/ai-cfia/nachet-backend:29-azureml-swin-classifier-22-spp
          imagePullPolicy: Always
          command: ["/bin/sh", "-c"]
          args: ['azmlinfsrv --entry_script /app/score.py']
          ports:
            - containerPort: 5001
          volumeMounts:
            - name: logs
              mountPath: /app/logs
            - name: tmp
              mountPath: /tmp
          livenessProbe:
            httpGet:
              path: /
              port: 5001
            initialDelaySeconds: 60
            periodSeconds: 10
          resources:
            requests:
              cpu: "250m"
              memory: "1Gi"
            limits:
              cpu: "500m"
              memory: "2Gi"
          securityContext:
            runAsNonRoot: false
            runAsUser: 1000
            runAsGroup: 1000
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      volumes:
        - name: tmp
          emptyDir:
            medium: Memory
            sizeLimit: 500Mi
        - name: logs
          emptyDir:
            medium: Memory
            sizeLimit: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: nachet-swin-classifier-22-spp-svc
  namespace: nachet
spec:
  clusterIP: None
  selector:
    app: nachet-swin-classifier-22-spp
  ports:
    - protocol: TCP
      port: 5001
